flask-crud/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-crud-service
  labels:
    app: flask-crud
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: flask-crud
